--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <h3>
           <u>Personal Information:</u>
         </h3>
-        <h5>brith date: may 19 2002</h5>
-         <h5>birth place: Famy laguna</h5>
+        <h5>Birth Date: May 19, 2002</h5>
+         <h5>Birth Place: Famy laguna</h5>
           <h5>Sex:Male</h5>
-           <h5>age: 19</h5>
+           <h5>Age: 19</h5>
            
      
     <center>
