--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Resume</title>
+<title>Matt Justin P. Echavaria</title>
 </head>
 <body>
    <div id="container">
